--- a/menu.html
+++ b/menu.html
@@ -77,6 +77,7 @@
 
     <main>
       <section class="menu-list">
+        <h2>OUR MENU</h2>
         <div class="cards home-cards">
           <!-- Card 1 -->
           <div class="card">
