--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Melia-Restaurant/Menu</title>
     <link rel="icon" href="img/logo.png" />
 
     <link
